--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/dpkolee/node_practice_project#readme",
   "dependencies": {
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
